<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/half_filled_background"
    android:orientation="vertical"
    tools:context=".MainActivity">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            app:cardBackgroundColor="#FFFFFF"
            android:layout_alignParentTop="true"
            android:minHeight="350dp"
            app:cardElevation="10dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="180dp"
            android:layout_marginBottom="140dp"
            app:cardCornerRadius="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout

                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:id="@+id/text_card"
                app:cardElevation="10dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="20dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_alignParentTop="true"
                    android:id="@+id/recognised_text_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:scrollbars="vertical"
                    android:maxLines="4"
                    android:fontFamily="sans-serif"
                    android:padding="10dp"
                    android:text="@string/recognised_text_to_be_shown_here"
                    android:textColor="#000000"
                    android:textSize="16sp" />

            </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/video_card"
                    android:padding="0dp"
                    app:cardBackgroundColor="@android:color/black"
                    android:layout_below="@id/text_card"
                    android:layout_marginTop="30dp"
                    app:cardElevation="10dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_alignParentBottom="false"
                    android:layout_width="wrap_content"
                    app:cardCornerRadius="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content">

                    <VideoView
                        android:layout_marginTop="10dp"
                        android:layout_alignParentBottom="false"
                        android:id="@+id/signs_video_view"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="10dp"
                        android:layout_height="160dp" />

                </com.google.android.material.card.MaterialCardView>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/add_sign_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card"
            android:layout_marginTop="-120dp"
            app:cardBackgroundColor="@android:color/white"
            android:minHeight="150dp"
            android:layout_marginHorizontal="40dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:text="Hello World"

                android:layout_height="wrap_content">

            </com.google.android.material.button.MaterialButton>

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <Button
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#03A9F4"
            android:fontFamily="sans-serif-condensed"
            android:onClick="startListening"
            android:padding="20dp"
            android:text="@string/listen"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:layout_below="@id/card"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:background="@android:color/white"
            android:id="@+id/sign_title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="50dp"
            android:hint="@string/sign_title"
            android:padding="10dp" />

        <Button
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#03A9F4"
            android:fontFamily="sans-serif-condensed"
            android:onClick="addNewSign"
            android:padding="20dp"
            android:text="@string/add_sign"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />


</RelativeLayout>